<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/content_detail_scene"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/file_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/file_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:maxLines="3"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/file_body"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/status_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/status_body"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="20sp"
            app:cornerRadius="30dp" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>